tourist_agency_project/src/main/java/com/example/demo/error/EmailAlreadyExistsException.java
package com.example.demo.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(HttpStatus.BAD_REQUEST)
public class EmailAlreadyExistsException extends Throwable{
    public EmailAlreadyExistsException(String message) {
        super(message);
    }
}